--- a/pants.ini
+++ b/pants.ini
@@ -1,9 +1,10 @@
 [DEFAULT]
-fsqio_version: 1.1.0
+fsqio_version: 1.1.1
 
 [GLOBAL]
 pants_version: 1.2.0
 
-plugins: +[
-    "fsqio.pants.contrib.buildgen.core==%(fsqio_version)s",
+backend_packages: +[
+    "pants.contrib.buildgen.core",
+    "pants.contrib.buildgen.jvm",
   ]
